--- a/style.css
+++ b/style.css
@@ -219,6 +219,14 @@ main > *
   height: 110vw;
 }
 
+@media only screen and (max-width: 600px)
+{
+  .description
+  {
+    height: 150vw;
+  }
+}
+
 .type
 {
   position: absolute;
