--- a/style.css
+++ b/style.css
@@ -188,8 +188,6 @@ main > *
   justify-content: center;
   border-style: solid;
   border-width: 0.3vw 0.3vw 0 0.3vw;
-  max-width: 100%;
-  background-color: pink;
 }
 
 .service-type
@@ -217,8 +215,9 @@ main > *
 .description
 {
   position: relative;
-  background-color: white;
+  background-color: red;
   height: 110vw;
+  max-width: 100%;
 }
 
 @media only screen and (max-width: 600px)
