--- a/style.css
+++ b/style.css
@@ -215,9 +215,8 @@ main > *
 .description
 {
   position: relative;
-  background-color: red;
+  background-color: white;
   height: 110vw;
-  max-width: 100%;
 }
 
 @media only screen and (max-width: 600px)
@@ -247,6 +246,8 @@ main > *
   left: 0;
   display: none;
   padding: 4vw;
+  max-width: 100%;
+  background-color: red;
 }
 
 .quote
